--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-greeting.message=Hello World!
+greeting.message=Hallo Welt!
 
-logging.level.root=INFO
-logging.level.org.delfin=DEBUG
-logging.file.path=/deve/logs
-logging.file.name=delfin.log
-
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:flipper
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
