--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,1 +1,4 @@
 greeting.message=Hello, Test!
+
+spring.datasource.url = jdbc:h2:mem:testdb
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
