wip: fix db access for tests, add swagger and jacoco to project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
 greeting.message=Hallo Welt!
 
-spring.datasource.url=jdbc:h2:mem:flipper
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+# main database configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.flyway.locations=classpath:db/migration
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:flipper
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# test database configuration
+#spring.flyway.test.enabled=true
+#spring.flyway.test.locations=classpath:testdb/migration
+#spring.datasource.test.url=jdbc:h2:mem:testdb
+#spring.datasource.test.username=sa
+#spring.datasource.test.password=
