--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,8 @@
 greeting.message=Hello, Test!
 
-spring.datasource.url = jdbc:h2:mem:testdb
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.flyway.locations=classpath:db/migration,testdb/migration
+#spring.flyway.test.locations=classpath:testdb/migration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
