wip: add integration tests and calculation logic

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-greeting.message=Hello, Test!
+greeting.message=\rHello, Test!
 
 spring.flyway.locations=classpath:db/migration,testdb/migration
 #spring.flyway.test.locations=classpath:testdb/migration
