--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-greeting.message=Hallo Welt!
+greeting.title=\n DEL/FINANZ SYSTEM
+greeting.message=\r\r AUT-API V0.1 (check /swagger for available endpoints)
+#config.location=file:./delfin-config.properties
 
 springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.path=/swagger
 
 # main database configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
