wip: add user details and roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.datasource.password=
 #spring.datasource.test.url=jdbc:h2:mem:testdb
 #spring.datasource.test.username=sa
 #spring.datasource.test.password=
+
+logging.level.org.springframework.beans=DEBUG
